css fixed alignment of sample date and name when play button is missing

--- a/browser/css/light.css
+++ b/browser/css/light.css
@@ -811,6 +811,7 @@ a:hover {
 }
 .button_left {
   float: left;
+  margin-right: -27px;
 }
 .button2 {
   border: solid;
