--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -961,6 +961,7 @@ a:hover {
 
 .button_left {
     float: left;
+    margin-right: -27px;
 }
 
 .button2 {
